from 2.7.10 to 2.7.11
- removed set_unexpected() invocation (not useful for years in libdar
  and incompatible with C++17)

from 2.7.9 to 2.7.10
- displaying the slicing information about the archive of reference
  stored within a isolated catalogue when using -l and -q options
- cleanup code from obsolete and unused readdir_r invocation
- fixing display bug in dar_manager (shell_interaction class of libdar)
- fixing python binding build system with the John Goerzen's proposal
- replacing the deprecated PYBIND11_OVERLOAD_* by PYBIND11_OVERRIDE_*
  equivalents

from 2.7.8 to 2.7.9
- added sanity check in elastic buffer code upon Sviat89@github
  feedback.
- fixed bug in block_compressor module found by sviat89 while reading
  the code. Seen its context, it does not seem however to have much
  chance to express and would lead dar/libdar to loop forever
  consuming CPU.
- adding the misc/dar_static_builder_with_musl_voidlinux.bash script
  which automatically builds dar_static from source code under
  VoidLinux/musl
- fixing bug concerning the restoration in sequential read mode of a
  backup containing binary patches
- fixed bug in tuyau_global class that lead to seeking at a wrong
  in sequential read mode and the unability to properly rely on a
  isolated catalogue to read (test/extract/diff) an backup in sequential
  read mode, leading dar to report CRC error.

from 2.7.7 to 2.7.8
- adapted code to workaround clang 10.0.1 bug under FreeBSD 12
- updating code and man page about the way to solve the conflict of
  sequentially reading the archive of reference when binary delta is
  implicitly present for differential/incremental backups
- added -avc option to surface libcurl verbose messages
- fixed bug in dar where a sanity check about slice min digit detection
  was applied to the local filesystem when the backup was stored
  remotely, this prevented the reading or remote backups
- exposing libcurl version to the version output (new API call added