@@ -1,6 +1,7 @@
 version 2.7.11
 --------------
-Thanks to Ryan Schmidt for feedback.
+Thanks to Ryan Schmidt for feedback. Thanks to John Goerzen for
+feedback and support.
 
 version 2.7.10
 --------------
