@@ -46,27 +46,27 @@ endif
 
 if BUILD_MODE32
   MYLIB=libdar32.la
-  AM_CPPFLAGS=-DLIBDAR_MODE=32 -DDAR_LOCALEDIR=\"$(localedir)\" $(CPP_PROF) $(GPGME_CFLAGS) $(LIBCURL_CFLAGS) $(LIBTHREADAR_CFLAGS)
+  AM_CPPFLAGS=-DLIBDAR_MODE=32 -DDAR_LOCALEDIR=\"$(localedir)\" $(CPP_PROF)
   VER_SRC=limitint.o
   LIBDAR_SUFFIX=32
   LIBDAR_MODE=-DLIBDAR_MODE=32
 else
 if BUILD_MODE64
     MYLIB=libdar64.la
-    AM_CPPFLAGS=-DLIBDAR_MODE=64 -DDAR_LOCALEDIR=\"$(localedir)\" $(CPP_PROF) $(GPGME_CFLAGS) $(LIBCURL_CFLAGS) $(LIBTHREADAR_CFLAGS)
+    AM_CPPFLAGS=-DLIBDAR_MODE=64 -DDAR_LOCALEDIR=\"$(localedir)\" $(CPP_PROF)
     VER_SRC=limitint.o
     LIBDAR_SUFFIX=64
     LIBDAR_MODE=-DLIBDAR_MODE=64
 else
     MYLIB=libdar.la
-    AM_CPPFLAGS= -DDAR_LOCALEDIR=\"$(localedir)\" $(CPP_PROF) $(GPGME_CFLAGS) $(LIBCURL_CFLAGS) $(LIBTHREADAR_CFLAGS)
+    AM_CPPFLAGS= -DDAR_LOCALEDIR=\"$(localedir)\" $(CPP_PROF)
     VER_SRC=real_infinint.o
     LIBDAR_SUFFIX=
     LIBDAR_MODE=
 endif
 endif
 
-AM_LDFLAGS = $(LTLIBINTL) $(LD_PROF) $(GPGME_LIBS) $(LIBCURL_LIBS) $(LIBTHREADAR_LIBS)
+AM_LDFLAGS = $(LTLIBINTL) $(LD_PROF)
 lib_LTLIBRARIES = $(MYLIB)
 
 LIBDAR_MAJOR=`grep LIBDAR_COMPILE_TIME_MAJOR '$(srcdir)/get_version.hpp' | cut -f 2 -d "=" | cut -f 1 -d ';' | sed -e 's% %%g'`
